--- a/.github/workflows/CI-CD-pipeline.yaml
+++ b/.github/workflows/CI-CD-pipeline.yaml
@@ -1,36 +1,42 @@
 name: Working with CI-CD-Pipelines
 
 on: 
-    workflow_dispatch:
-        inputs:
-            dry-run:
-                type: boolean
-                description: Skip deployment and only print build output
-                default: false
-            target:
-                type: environment
-                required: true
-                description: Which environment the workflow will target
-            tag:
-                type: choice
-                options:
-                    - v1
-                    - v2
-                    - v3
-                default: v3
-                description: Release from which to build and deploy
-
+    push:
+        branches: 
+            main      
 jobs:
-    build:
+    build_and_deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Build
-              run: echo "Building from tag ${{ inputs.tag }}"
-    deploy:
-        runs-on: ubuntu-latest
-        if: ${{ !inputs.dry-run }}
-        environment: ${{ inputs.target }}
-        needs: build
-        steps:
-            - name: Deploy
-              run: echo "Deploying to ${{ inputs.target }}"
+            # Step 1: Checkout the code from GitHub repository
+            - name : Checkout code
+              uses : actions/checkout@v3
+
+            # Step 2: Set up Docker Buildx (required for advanced Docker features)
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+
+            # Step 3: Log in to Amazon ECR using GitHub Secrets
+            - name: Log in to Amazon ECR
+              uses: docker/login-action@v2
+              with:
+                username: AWS
+                password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                registry: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+ 
+            # Step 4: Build the Docker image and push it to Amazon ECR
+            - name: Build and Push Docker image
+              uses: docker/build-push-action@v3
+              with:
+                context: .
+                file: ./app/Dockerfile
+                push: true
+                tags: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-repo-name:latest
+
+            # Step 5: Set up AWS CLI with credentials for deployment
+            - name: Set up AWS CLI
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ${{ secrets.AWS_REGION }}
