--- a/.github/workflows/CI-CD-pipeline.yaml
+++ b/.github/workflows/CI-CD-pipeline.yaml
@@ -17,13 +17,10 @@ jobs:
               uses: docker/setup-buildx-action@v2
 
             # Step 3: Log in to Amazon ECR using GitHub Secrets
-            - name: Log in to Amazon ECR
-              uses: docker/login-action@v2
-              with:
-                username: AWS
-                password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                registry: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
- 
+            - name: Login to Amazon ECR
+              id: login-ecr
+              uses: aws-actions/amazon-ecr-login@v1
+
             # Step 4: Build the Docker image and push it to Amazon ECR
             - name: Build and Push Docker image
               uses: docker/build-push-action@v3
