--- a/.github/workflows/CI-CD-pipeline.yaml
+++ b/.github/workflows/CI-CD-pipeline.yaml
@@ -12,10 +12,14 @@ jobs:
             - name : Checkout code
               uses : actions/checkout@v3
 
-            # Step 2: Set up Docker Buildx (required for advanced Docker features)
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-
+            # Step 2: AWS credentials
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v2
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # AWS Access Key from GitHub secrets
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # AWS Secret Key from GitHub secrets
+                aws-region: ap-south-1  # Your AWS region
+          
             # Step 3: Log in to Amazon ECR using GitHub Secrets
             - name: Login to Amazon ECR
               id: login-ecr
