--- a/.github/workflows/CI-CD-pipeline.yaml
+++ b/.github/workflows/CI-CD-pipeline.yaml
@@ -56,7 +56,7 @@ jobs:
  
       - name: Deploy to ECS using AWS CLI
         run: |
-          aws ecs update-service --cluster my-ecs-fargate-cluster --service my-fargate-service --force-new-deployment --task-definition my-fargate-task
+          aws ecs update-service --cluster demo-ecs-cluster --service my-fargate-service --force-new-deployment --task-definition my-fargate-task
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # AWS Access Key from GitHub secrets
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # AWS Secret Key from GitHub secrets
